# Django-Chat-Room

./: db.sqlite3  pyproject.toml
chat/templates/: index.html
core/: settings.py
