[tool.poetry]
name = "chat room"
version = "0.1.0"
description = ""
authors = ["Mrudhulraj <mrudhulraj.n@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
routing = "^0.2.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
Django = "^3.1.1"
channels = "^2.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
